2005-01-18  Murray Cumming  <murrayc@murrayc.com>
 
	* demos/demowindow.cc: #ifdef on __SUNPRO_CC instead of 
	GLIBMM_COMPILER_SUN_FORTE, though we should really find out why 
	GLIBMM_COMPILER_SUN_FORTE is not defined with the SUN compiler.
	* demos/example_stockbrowser.cc: Remove some consts that the 
	SUN compiler does not allow.
	* gtk/src/radiobutton.hg: Remove duplicate Group typedef, which 
        SUN Forte complains about.
        * This should fix the remaining issues in bug #154973.
	Joel Fredrikson helped with these fixes.

2005-01-11  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/custom/custom_widget/mywidget.cc: Fix from Marco 
	(mshcoltn) to make this widget actually draw something: on_realize():
	Use get_window() instead of creating our own Gdk::Window. I am not 
	sure why this works, but it is simpler.

2.5.5:

2005-01-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.[hg|ccg]: Added Main constructor that takes a 
	Glib::OptionContext(), and added 
	Main::add_gtk_option_group(option_context) to wrap functionality in 
	gtk_init_with_args() and gtk_get_option_group(), hopefully.
	* tests/: Added main_with_option_group to show that it works.

2005-01-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/combobox.hg, comboboxentry.hg, clipboard.hg, cellview.hg, 
	celllayout.hg, celleditable.hg, cellrenderer*.hg: Added class 
	documentation, based on the C documentation.
	* gtk/src/clipboard.hg: Added set_can_store() overload that takes no 
	arguments.
	* gtk/src/combobox.hg: Added unset_row_separator_func().

2005-01-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooserbutton.[hg|ccg]: Inherit from the FileChooser 
	interface. Add constructor which takes no title. Add documentation, 
	based on the C documentation.

2005-01-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/examples/book/buttons/: Added filechooserbutton example, 
	though I see g_warnings.

2005-01-09  Murray Cumming  <murrayc@murrayc.com>
