@@ -1,4 +1,9 @@
 2005-01-18  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/input/main.cc: Add extra #includes, needed by 
+	the SUN Forte compiler.
+
+2005-01-18  Murray Cumming  <murrayc@murrayc.com>
  
 	* demos/demowindow.cc: #ifdef on __SUNPRO_CC instead of 
 	GLIBMM_COMPILER_SUN_FORTE, though we should really find out why 
